# UR-Bot

./: Dockerfile  docker-compose.yaml  entrypoint.sh
src/ur_bot_control/: CMakeLists.txt  package.xml
src/ur_bot_control/config/: hw_controllers.yaml
src/ur_bot_control/launch/: control.launch.py
src/ur_bot_description/: CMakeLists.txt  package.xml
src/ur_bot_description/launch/: rsp.launch.py  view.launch.py
src/ur_bot_description/models/: robot.urdf.xacro
src/ur_bot_description/models/include/: arm.xacro
src/ur_bot_description/rviz/: view.rviz
src/ur_bot_msgs/: CMakeLists.txt  package.xml
src/ur_bot_msgs/srv/: JointsGoal.srv  PoseGoal.srv
src/ur_bot_planners/: CMakeLists.txt  package.xml
src/ur_bot_planners/scripts/: planner_spline.py
src/ur_bot_planners/src/: planner_spline.cpp
src/ur_robot_control/: CMakeLists.txt  package.xml
src/ur_robot_control/launch/: control.launch.py
src/ur_robot_description/: CMakeLists.txt  package.xml
src/ur_robot_description/launch/: rsp.launch.py  view.launch.py
src/ur_robot_description/models/: core.xacro  robot.urdf.xacro
src/ur_robot_description/models/include/: arm.xacro  conveyor.xacro  tool.xacro
src/ur_robot_description/rviz/: moveit.rviz  moveit_frontend.rviz  mtc.rviz  mtc_frontend.rviz  view.rviz  view_frontend.rviz
src/ur_robot_msgs/: CMakeLists.txt  package.xml
src/ur_robot_msgs/srv/: Case.srv
